# Aegis-AI-Brain

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml
docs/: workflows.md
docs/en/: workflows.md
docs/fr/: llm-payloads.md  neo4j-graph.md  workflows.md
src/: grpc_server.py  main.py  worker.py
src/activities/: db_activities.py  kubernetes_activities.py
src/aegis/v1/: ping_pb2.py  ping_pb2_grpc.py  scan_pb2.py  scan_pb2_grpc.py  vulnerability_pb2.py  vulnerability_pb2_grpc.py
src/aegis/v2/: ping_pb2.py  ping_pb2_grpc.py  scan_pb2.py  scan_pb2_grpc.py  vulnerability_pb2.py  vulnerability_pb2_grpc.py
src/config/: config.py  db.py
src/grpc_services/: broadcaster.py  ping.py  scans.py  utils.py  vulnerabilities.py
src/reports/: engine.py
src/workflows/: pentest_workflow.py
tests/: conftest.py  test_activities.py  test_db.py  test_grpc_server.py  test_grpc_server_entry.py  test_kubernetes_activities.py  test_main.py  test_reports_extra.py  test_services_extra.py  test_workflow.py
